# akinator

./: Makefile  data.csv  pyproject.toml
doc/: plan.md
src/akinator/: main.py
src/akinator/cli/: main.py
