[tool.poetry]
name = "akinator"
version = "0.1.0"
description = ""
authors = ["sizer <shinse.tanaka@gmail.com>"]

[tool.poetry.scripts]
start = "akinator.main:start"

[tool.poetry.dependencies]
python = "^3.7.11"
click = "^8.0.1"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
